# stori-newsletter-sending-app

./: README.md
backend/: .env  api.py  db.py  pyproject.toml
backend/db/assets/: stori-newsletter.db
frontend/stori-newsletter-admin/: package-lock.json  package.json  tailwind.config.cjs
frontend/stori-newsletter-admin/src/: App.vue  style.css
frontend/stori-newsletter-admin/src/components/: DashboardComponent.vue  HelloWorld.vue  LoginComponent.vue  NavigationComponent.vue
